deploy/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tts-gateway
  labels:
    app: tts-gateway
spec:
  type: ClusterIP
  selector:
    app: tts-gateway
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
